--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 jupyter==1.1.1
 pandas==2.2.3
-numpy==2.2.5
+numpy==2.1.3
 matplotlib==3.10.3
 tensorflow==2.19.0
 tqdm==4.67.1
 ccxt==4.4.80
 ta==0.11.0
-mplfinance==0.12
+mplfinance==0.12.10b0
